添加审计服务
